# QtCodeBuddy

./: .gitignore  README.md
Chapter01_Basic/: CMakeLists.txt  HelloWorld.cpp  HelloWorld.h  main.cpp
Chapter02_Widgets/: CMakeLists.txt  WidgetsDemo.cpp  WidgetsDemo.h  main.cpp
Chapter03_Layouts/: CMakeLists.txt  LayoutDemo.cpp  LayoutDemo.h  main.cpp
Chapter04_SignalsSlots/: CMakeLists.txt  Counter.cpp  Counter.h  SignalsSlotsDemo.cpp  SignalsSlotsDemo.h  main.cpp
Chapter05_Events/: CMakeLists.txt  ClickLabel.cpp  ClickLabel.h  EventDemo.cpp  EventDemo.h  MouseTracker.cpp  MouseTracker.h  main.cpp
Chapter06_Dialogs/: CMakeLists.txt  CustomDialog.cpp  CustomDialog.h  DialogDemo.cpp  DialogDemo.h  main.cpp
Chapter07_MainWindow/: CMakeLists.txt  MainWindowDemo.cpp  MainWindowDemo.h  TextEditWidget.cpp  TextEditWidget.h  main.cpp
Chapter08_CustomWidget/: CMakeLists.txt  CircularProgressBar.cpp  CircularProgressBar.h  ColorPickerWidget.cpp  ColorPickerWidget.h  CustomWidgetDemo.cpp  CustomWidgetDemo.h  main.cpp
Chapter10_FileIO/: CMakeLists.txt  FileIODemo.cpp  FileIODemo.h  main.cpp
Chapter11_Settings/: CMakeLists.txt  SettingsDemo.cpp  SettingsDemo.h  main.cpp
Chapter12_ModelView/: CMakeLists.txt  ModelViewDemo.cpp  ModelViewDemo.h  main.cpp
Docs/: 00_学习路线图.md  01_第1章_Qt6基础入门.md  02_第2章_窗口和部件.md  03_第3章_布局管理.md  04_第4章_信号与槽.md  05_第5章_事件处理.md  06_第6章_对话框.md  07_第7章_主窗口.md  08_第8章_自定义控件.md  09_NotepadPro实战项目.md  10_第10章_文件操作.md  11_第11章_QSettings配置存储.md  12_第12章_模型视图.md
NotepadPro/: .gitignore  CMakeLists.txt  DESIGN.md  LEARNING.md  main.cpp
NotepadPro/core/: Category.cpp  Category.h  Note.cpp  Note.h  NoteManager.cpp  NoteManager.h
NotepadPro/dialogs/: AboutDialog.cpp  AboutDialog.h  CategoryDialog.cpp  CategoryDialog.h  NotePropertiesDialog.cpp  NotePropertiesDialog.h  SettingsDialog.cpp  SettingsDialog.h
NotepadPro/mainwindow/: MainWindow.cpp  MainWindow.h
NotepadPro/resources/: icons.qrc
NotepadPro/widgets/: CategoryTree.cpp  CategoryTree.h  NoteListWidget.cpp  NoteListWidget.h  RichTextEditor.cpp  RichTextEditor.h  SearchWidget.cpp  SearchWidget.h  StatusWidget.cpp  StatusWidget.h
